# pocket-tensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kerasify.py  make_tests.py  pt.py
benchmark/: CMakeLists.txt
benchmark/include/: fd_bench.h  kf_bench.h  pt_bench.h
benchmark/python/: imdb_bench.py  mnist_bench.py
benchmark/src/: fd_bench.cpp  kf_bench.cpp  main.cpp  pt_bench.cpp
lib/: CMakeLists.txt
lib/include/: pt_assert.h  pt_config.h  pt_dispatcher.h  pt_layer.h  pt_layer_data.h  pt_libsimdpp.h  pt_model.h  pt_tensor.h  pt_tweakme.h
lib/src/: pt_activation_layer.cpp  pt_activation_layer.h  pt_add.h  pt_batch_normalization_layer.cpp  pt_batch_normalization_layer.h  pt_conv_1d_layer.cpp  pt_conv_1d_layer.h  pt_conv_2d_layer.cpp  pt_conv_2d_layer.h  pt_dense_layer.cpp  pt_dense_layer.h  pt_dispatcher.cpp  pt_elu_activation_layer.h  pt_elu_layer.cpp  pt_elu_layer.h  pt_embedding_layer.cpp  pt_embedding_layer.h  pt_flatten_layer.cpp  pt_flatten_layer.h  pt_global_max_pooling_2d_layer.cpp  pt_global_max_pooling_2d_layer.h  pt_hard_sigmoid_activation_layer.h  pt_input_layer.h  pt_layer.cpp  pt_leaky_relu_layer.cpp  pt_leaky_relu_layer.h  pt_linear_activation_layer.h  pt_locally_connected_1d_layer.cpp  pt_locally_connected_1d_layer.h  pt_logger.h  pt_lstm_layer.cpp  pt_lstm_layer.h  pt_max.h  pt_max_pooling_2d_layer.cpp  pt_max_pooling_2d_layer.h  pt_model.cpp  pt_multiply.h  pt_multiply_add.h  pt_parser.h  pt_relu_activation_layer.h  (+9 more)
tests/: CMakeLists.txt
tests/include/: test_util.h
tests/src/: conv1d_2_test.cpp  conv1d_3_test.cpp  conv1d_3x3_test.cpp  conv_2x2_test.cpp  conv_3x3_test.cpp  conv_3x3x3_test.cpp  conv_hard_sigmoid_2x2_test.cpp  conv_sigmoid_2x2_test.cpp  conv_softplus_2x2_test.cpp  dense_10x10_test.cpp  dense_10x10x10_test.cpp  dense_10x1_test.cpp  dense_1x1_test.cpp  dense_2x2_test.cpp  dense_elu_10_test.cpp  dense_relu_10_test.cpp  dense_softmax_10_test.cpp  dense_softsign_10_test.cpp  dense_tanh_10_test.cpp  elu_10_test.cpp  embedding_64_test.cpp  locally_connected_1d_2_test.cpp  locally_connected_1d_3_test.cpp  locally_connected_1d_3x3_test.cpp  lstm_simple_7x20_test.cpp  lstm_simple_stacked_16x9_test.cpp  lstm_stacked_64x83_test.cpp  maxpool2d_1x1_test.cpp  maxpool2d_2x2_test.cpp  maxpool2d_3x2x2_test.cpp  maxpool2d_3x3x3_test.cpp  relu_10_test.cpp  test_util.cpp
